sc/mail-relay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-relay
  namespace: sc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-relay
  template:
    metadata:
      labels:
        app: mail-relay
    spec:
      containers:
        - name: mail-relay
          image: juanluisbaptiste/postfix
          ports:
            - containerPort: 25
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 1Gi
