sc/sc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc
  namespace: sc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sc
  template:
    metadata:
      labels:
        app: sc
    spec:
      containers:
        - name: sc
          image: ghcr.io/cngei/sc:32498d59204b7986bf2fd1a8a54e812275950bbf
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 2000m
              memory: 8Gi
            limits:
              cpu: 4000m
              memory: 8Gi
