sc/mail-relay-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-relay
  namespace: sc
  labels:
    app: mail-relay
spec:
  ports:
    - name: mail-relay-smtp
      port: 25
      targetPort: 25
  selector:
    app: mail-relay
  type: ClusterIP
