sc/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sc-ingress
  namespace: sc
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.cngei.it`)
      services:
        - kind: Service
          name: sc
          port: 8080
  tls:
    secretName: sc-tls
